--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,9 @@
     <section id="education">
         <h2>Educational Background</h2>
         <!-- Brief info about your degree -->
-        <p>I hold a degree in Mathematics from University of Nairobi.</p>
+         <ul>
+            <li>I hold a degree in Mathematics from University of Nairobi.</li>
+         </ul>
         <!-- Downloadable CV link -->
         <a href="Otsieno CV.pdf" download>Download My CV</a>
     </section>
@@ -81,7 +83,7 @@
     <section id="contact">
         <h2>Contact Me</h2>
         <!-- Contact Form -->
-        <form action="https://formspree.io/your-email" method="POST">
+        <form action="https://formspree.io/f/movazned" method="POST">
             <!-- Name input -->
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
@@ -98,6 +100,8 @@
             <button type="submit">Send Message</button>
         </form>
     </section>
+    <form action="contact.php" method="POST">
+S
 
     <!-- Footer Section -->
     <footer>
